--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.18.1
-pandas==1.4.4
-sklearn==0.0.post1
-pandas==1.4.4
-scikit-learn==1.0.2
+streamlit
+pandas
+sklearn
+pandas
+scikit-learn
